k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: eshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eshop-service
                port:
                  number: 80
